@@ -55,12 +55,13 @@ import mobac.program.atlascreators.OSMTracker;
 import mobac.program.atlascreators.OruxMaps;
 import mobac.program.atlascreators.OruxMapsSqlite;
 import mobac.program.atlascreators.Osmdroid;
+import mobac.program.atlascreators.OsmdroidGEMF;
 import mobac.program.atlascreators.OsmdroidSQLite;
 import mobac.program.atlascreators.Ozi;
 import mobac.program.atlascreators.PNGWorldfile;
-import mobac.program.atlascreators.PathAway;
 import mobac.program.atlascreators.PaperAtlasPdf;
 import mobac.program.atlascreators.PaperAtlasPng;
+import mobac.program.atlascreators.PathAway;
 import mobac.program.atlascreators.RMapsSQLite;
 import mobac.program.atlascreators.RunGPSAtlas;
 import mobac.program.atlascreators.SportsTracker;
@@ -112,6 +113,7 @@ public class AtlasOutputFormat implements Comparable<AtlasOutputFormat> {
 		FORMATS.add(createByClass(OSMAND.class));
 		FORMATS.add(createByClass(OSMAND_SQlite.class));
 		FORMATS.add(createByClass(Osmdroid.class));
+		FORMATS.add(createByClass(OsmdroidGEMF.class));
 		FORMATS.add(createByClass(OsmdroidSQLite.class));
 		FORMATS.add(createByClass(OSMTracker.class));
 		FORMATS.add(createByClass(Ozi.class));
